# project_euler

./: .gitignore  CMakeLists.txt  build.bat  main.cpp  vcpkg.json  vcpkg_use.txt
src/: euler.hpp  euler_1_to_50.cpp  euler_1_to_50_tests.cpp  main.cpp
src/include/: euler.hpp
